2025-01-02  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c, im_common.h, skk/ef_str_parser.c, gtkxlfdsel.[ch],
	  mc_combo.[ch], mc_im.c, mc_opentype.c, fb/ui_font.c, ui_brltty.c,
	  ui_copymode.[ch], ui_im.h, ui_im_candidate_screen.[ch],
	  ui_im_status_screen.[ch], ui_screen.c, libptyssh/vt_pty_ssh.c,
	  vt_str_parser.c: Add const.

	* vte.c, ui_screen.c, vt_screen.c: Disable searching functions of vte while
	  "OSC 5379 search_next", "OSC 5379 search_prev" or searching in copy mode
	  is activated.

	* encodefilter/ef_*_parser.[ch]: Add const to the 2nd argument of *_set_str().

	* bl_path.[ch]: Add bl_basename_simple()

2024-12-08  Araki Ken  <arakiken@users.sf.net>

	* vte.c: Add vte 0.76 and 0.78 apis.

2024-11-11  SATOH Fumiyasu  <fumiyas@osstech.co.jp>

	* tool/mlconfig/main.c: Save trim_trailing_newline_in_pasting and broadcast flags

2024-11-02  Araki Ken  <arakiken@users.sf.net>

	* configure.in, baselib/configure.in:
	  Remove AC_RUN_IFELSE() checking if posix_openpt() works.
	  (https://github.com/arakiken/mlterm/issues/113)

2024-10-19  Araki Ken  <arakiken@users.sf.net>

	* configure.in: Show $UTMP_NAME instead of $utmp for "utmp support" message.

	* libind/libind_lex.split.c -> lex.split.c

2024-09-29  Araki Ken  <arakiken@users.sf.net>

	* cocoa.m: window_dealloc() calls [window close] instead of [window release].

2024-09-08  Araki Ken  <arakiken@users.sf.net>

	* im_fcitx.c:
	  - Add declaration of fcitx_client_{enable|close}_ic().
	  - Undefine USE_IM_CANDIDATE_SCREEN in wayland.
	  - event->keycode - 8 -> event->keycode
	  - print_candate -> print_candidate

	* wayland/ui_display.c: Set ev.keycode to 'key + 8' instead of 0
	  in keyboard_key().

	* ui_draw_str.c: Add 'int draw_bg' to arguments of draw_picture().

	* vt_parser.c: show_picture() calls interrupt_vt100_cmd() if
	  vt_screen_line_feed() returns 2.

	* vt_edit.c: vt_edit_go_downward() returns 2 if screen scrolling occurs.

2024-08-17  Araki Ken  <arakiken@users.sf.net>
